# github-actions-workflows

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  publish.yml  pyproject.toml  setup.cfg  setup.py  tox.ini  tox.yml  update_scripts_in_yml.py
.github/: dependabot.yml  noxfile.py  release.yml
.github/workflows/: publish.yml  publish_pure_python.yml  pull_from_upstream.yml  test.yml  test_publish.yml  test_publish_pure_python.yml  test_publish_to_testpypi.yml  test_tox.yml  tox.yml  update_tag.yml
docs/: requirements.txt
docs/source/: build-and-publish-pure-python-package.rst  build-and-publish-python-package.rst  conf.py  index.rst  publish.rst  publish_pure_python.rst  test-python-package.rst  tox.rst  trusted_publishing.rst
test_package/: __init__.py  simple.c
test_package/tests/: test_publish_pypi.py
tools/: load_build_targets.py  set_env.py  supported_pythons.py  tox_matrix.py
