[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel.linux]
environment-pass = ["GITHUB_WORKFLOW"]

[[tool.cibuildwheel.overrides]]
select = "cp3*t-*"
inherit.environment = "append"
environment = {"PYTHON_GIL" = "0"}

[project]
name = "test-package"
dynamic = ["version"]

[project.optional-dependencies]
recommended = [
    "boto3",
    "urllib3",
]

[dependency-groups]
concurrency = [
    {include-group = "test"},
    "pytest-repeat>=0.9.3",
    "pytest-run-parallel>=0.4.4",
]
test = [
    "hypothesis>=6.113.0",
    "pytest>=8.3.5",
]
publish = [
    {include-group = "test"},
    "build>=1.0.0",
    "twine>=5.0.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "I", # isort
]
