[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel.linux]
environment-pass = ["GITHUB_WORKFLOW"]

[[tool.cibuildwheel.overrides]]
select = "cp3*t-*"
inherit.environment = "append"
environment = {"PYTHON_GIL" = "0"}

[project]
name = "test-package"
dynamic = ["version"]

[project.optional-dependencies]
recommended = [
    "boto3",
    "urllib3",
]

[dependency-groups]
concurrency = [
    {include-group = "test"},
    "pytest-repeat>=0.9.3",
    "pytest-run-parallel>=0.4.4",
]
covcheck = [
    "coverage[toml] ; python_version < '3.11'",
    "coverage>=7.11.3",
    "pytest-cov>=7.0.0",
]
test = [
    "hypothesis>=6.113.0",
    "pytest>=8.3.5",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "I", # isort
]
